simple-spring/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-spring
  labels:
    app: simple-spring
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: simple-spring
