simple-spring/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-spring
  labels:
    app: simple-spring
spec:
  to:
    kind: Service
    name: simple-spring
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
